infrastructure/kubernetes/gateway/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: gateway-service
  namespace: ${K8S_NAMESPACE}

spec:

  selector:
    app: gateway

  ports:

    - protocol: TCP
      port: 80
      targetPort: 8000

  type: LoadBalancer
